[gd_scene load_steps=2 format=3 uid="uid://blcm880jc6ppo"]

[ext_resource type="Script" uid="uid://dbgbii8yy4hki" path="res://addons/cactus.godotethersweb/examples/Examples.gd" id="1_knpgc"]

[node name="Examples" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_knpgc")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.301961, 0.301961, 0.301961, 1)

[node name="ConnectWallet" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 15.0
offset_right = 227.0
offset_bottom = 69.0
mouse_default_cursor_shape = 2
text = "Connect Wallet
"

[node name="WalletInfo" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 90.0
offset_right = 227.0
offset_bottom = 144.0
mouse_default_cursor_shape = 2
text = "Wallet Info"

[node name="ContractRead" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 165.0
offset_right = 227.0
offset_bottom = 219.0
mouse_default_cursor_shape = 2
text = "Contract Read"

[node name="ERC20Info" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 240.0
offset_right = 227.0
offset_bottom = 294.0
mouse_default_cursor_shape = 2
text = "ERC20 Info"

[node name="Sign" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 315.0
offset_right = 227.0
offset_bottom = 369.0
mouse_default_cursor_shape = 2
text = "Sign"

[node name="SignTyped" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 390.0
offset_right = 227.0
offset_bottom = 444.0
mouse_default_cursor_shape = 2
text = "Sign Typed"

[node name="MintBnM" type="Button" parent="."]
layout_mode = 0
offset_left = 177.0
offset_top = 457.0
offset_right = 359.0
offset_bottom = 511.0
mouse_default_cursor_shape = 2
text = "Mint BnM"

[node name="ApproveRouter" type="Button" parent="."]
layout_mode = 0
offset_left = 178.0
offset_top = 522.0
offset_right = 360.0
offset_bottom = 576.0
mouse_default_cursor_shape = 2
text = "Approve Router"

[node name="CCIPSend" type="Button" parent="."]
layout_mode = 0
offset_left = 178.0
offset_top = 588.0
offset_right = 360.0
offset_bottom = 642.0
mouse_default_cursor_shape = 2
text = "CCIP Send"

[node name="EventStart" type="Button" parent="."]
layout_mode = 0
offset_left = 927.0
offset_top = 250.0
offset_right = 1109.0
offset_bottom = 304.0
mouse_default_cursor_shape = 2
text = "Event Listen"

[node name="EventStop" type="Button" parent="."]
layout_mode = 0
offset_left = 927.0
offset_top = 325.0
offset_right = 1109.0
offset_bottom = 379.0
mouse_default_cursor_shape = 2
text = "Stop Listening"

[node name="ListenNotice" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 917.0
offset_top = 125.0
offset_right = 1172.0
offset_bottom = 244.0
text = "Listening for \"CCIPSendRequested\" events
on Ethereum Sepolia ->
Avalanche Fuji lane"
autowrap_mode = 3

[node name="Log" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 373.0
offset_top = 24.0
offset_right = 903.0
offset_bottom = 630.0
editable = false
wrap_mode = 1

[node name="EthereumSepolia" type="Label" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 461.0
offset_right = 167.0
offset_bottom = 510.0
text = "Ethereum Sepolia
CCIP Test"
horizontal_alignment = 1
